# keeb

./: .gitignore  README.md
firmware/: Cargo.toml  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: layout.rs  leds.rs  lib.rs  main.rs  pins.rs  usb.rs
hardware/: keeb.kicad_pro  keeb.kicad_sch  matrix.kicad_sch
